@@ -13,6 +13,7 @@
  9. Add 'Go to composer' for tracks in composer genres that have composer set.
 10. Fix 'Inserted XXX into the play queue' messages not showing.
 11. Use current player when calling custom action from main menu.
+12. Allow specifying toolbar title for iframe custom actions.
 
 1.8.1
 -----
